--- a/index.html
+++ b/index.html
@@ -1,142 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
- <link rel="stylesheet" href="css/styles.css">
- <title>Delani Studio</title>
- <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/0c3a8991fb082b831f0556fce/3af0a402a75f4953479c1801c.js");</script>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Delani Studio</title>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/0c3a8991fb082b831f0556fce/3af0a402a75f4953479c1801c.js");</script>
 </head>
 <body>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-     <img src="./static/assets/logo/logo.png" alt="logo" class="center">
-     <br>
-     <h1 class="text-white text-center">WELCOME</h1>
-     <br>
-     <h1 class="text-white text-center">TO DELANI STUDIO</h1>
-     <br>
-     <h6 class="text-white text-center">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h3>
-     <br><br><br>
-     <img src="./static/assets/mouse_click.png" class="mouse">
+      <img src="./static/assets/logo/logo.png" alt="logo" class="center">
+      <br>
+      <h1 class="text-white text-center">WELCOME</h1>
+      <br>
+      <h1 class="text-white text-center">TO DELANI STUDIO</h1>
+      <br>
+      <h6 class="text-white text-center">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h3>
+      <br><br><br>
+      <img src="./static/assets/mouse_click.png" class="mouse" id="bounce">
    </div>
  </div>
-    <h1 class="text-center" >ABOUT US</h1><br>
-    <p class="text-center">When you work with us, you are a part of a team of committed collaborators. All
-     aspects of our software development process are integrated, interactive and agile </p>
-    <p class="text-center">Our approach unifies design, development and product management to create exceptional
-     products.</p>
-    <p class="text-center">We start each project by understanding your business goals, the user's needs
-     and the product requirements.<br> Then we help them translate into effective
-     and elegant solutions.</p>
-<div class="services">
-  <div class="container">
-    <br>
-    <h1 class="text-center text-white">SERVICES</h1>
-    <br>
-    <p class="text-center text-white m-text">Before we sign or write a line of code our team will spend the necessary time needed to understand your product vision.<br>The outcome of this scoping
-     session is a proposal or high level statement of work.<br>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
-  </div>
-</div>
-  <br>
-  <h1 class="text-center">WHAT WE DO</h1><br><br>
-  <div class="container-fluid">
-   <div class="row">
-      <div class="col-md-4">
-          <img src="./static/assets/services_icons/design_icon.png" class="show img-fluid">
-          <h4><strong>DESIGN</strong></h5>
-          <p class="hide">Our design practice offers a full range of services including brand strategy,
-              interaction and visual design and user experience testing. Throughout your project, our designers create and implement visual design and workflows, solicit
-              user feedback and work with you to make sure what gets built is what is needed.</p>
-      </div>
-      <div class="col-md-4">
-          <img src="static/assets/services_icons/dev_icon.png" alt="services-icons" class="service-icons dev">
-          <h4><strong>DEVELOPMENT</strong></h4>
-          <br>
-          <p class="hide">All engineers are fluent in the latest enterprise, mobile and web development technologies.
-            They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
-          </p>
-      </div>
-      <div class="col-md-4">
-            <img src="static/assets/services_icons/product_icon.png" alt="services-icons" class="service-icons pro">
-            <h4><strong>PRODUCT DESIGN</strong></h4>
-            <br>
-            <p class="hide">Planning and development is iterative. Because we are constantly coding and testing,the products
-                  we build are always ready to go live.This iterative process allows for changes as business requirements evolve.</p>
-      </div>
-    </div>
-    <div class="container-fluid" id="portfolio">
-      <h1 class="text-center">PORTFOLIO</h1><br><br>
-      <div class="row">
-          <div class="col-md-2"></div>
-          <div class="col-md-2">
-              <img src="./static/assets/portfolio/work4.jpg" alt="portfolio-images" class="image img-fluid">
-               <div class="ptext" style="display:none">Delani Studio</div>
-          </div>
-          <div class="col-md-2">
-             <img src="./static/assets/portfolio/work3.jpg" alt="portfolio-images" class="image img-fluid">
-             <div class="ptext" style="display:none">Delani Studio</div>
-          </div>
-          <div class="col-md-2">
-              <img src="./static/assets/portfolio/work2.jpg" alt="portfolio-images" class="image img-fluid">
-              <div class="ptext" style="display:none">Delani Studio</div>
-          </div>
-          <div class="col-md-2">
-             <img src="./static/assets/portfolio/work1.jpg" alt="portfolio-images" class="image img-fluid">
-             <div class="ptext" style="display:none">Delani Studio</div>
-          </div>
-      </div>
-      <br>
-      <div class="row">
-          <div class="col-md-2"></div>
-          <div class="col-md-2">
-            <img src="./static/assets/portfolio/work5.jpg" alt="portfolio-images" class="image img-fluid">
-            <div class="ptext" style="display:none">Delani Studio</div>
-          </div>
-          <div class="col-md-2">
-            <img src="./static/assets/portfolio/work6.jpg" alt="portfolio-images" class="image img-fluid">
-            <div class="ptext" style="display:none">Delani Studio</div>
-          </div>
-          <div class="col-md-2">
-            <img src="./static/assets/portfolio/work7.jpg" alt="portfolio-images" class="image img-fluid">
-            <div class="ptext" style="display:none">Delani Studio</div>
-          </div>
-          <div class="col-md-2">
-            <img src="./static/assets/portfolio/work8.jpg" alt="portfolio-images" class="image img-fluid">
-            <div class="ptext" style="display:none">Delani Studio</div>
-          </div>
-      </div>
-        <br>
-     <div class="contact">
-       <h1 class="text-center text-white">CONTACT US</h1><br>
-       <div class="col-md-12 input">
-           <form id="form">
-             <div class="row">
-                 <div class="col-md-2 form"></div>
-                 <input class="col-md-4 form-control name" type="text" id="name" name="name" placeholder="Name..."
-                        required><br><br>
-                 <input class="col-md-4 form-control email" type="email" id="email" name="email" placeholder="Email..."
-                        required>
-                 <div class="col-md-2">
-                 </div>
-             </div>
-              <div class="row input">
-                 <div class="col-md-2"></div>
-                 <textarea class="form-control col-md-8 text" rows="12" name="message" id="message" placeholder="Your message here..."></textarea>
-             </div>
-          </form>
-      </div>
-             <button type="submit" class="btn btn-primary text-center">Submit</button>
-             <br>
-             <div class="social_icons mx-auto text-center">
-                 <div class="col-md-2"></div>
-                 <img src="./static/assets/social_icons/twitter.png">
-                 <img src="./static/assets/social_icons/dribble.png">
-                 <img src="./static/assets/social_icons/facebook.png">
-                 <img src="./static/assets/social_icons/g_plus.png">
-                 <img src="./static/assets/social_icons/skype.png">
-                 <img src="./static/assets/social_icons/stumble_upon.png">
-                 <img src="./static/assets/social_icons/behance.png">
-                 <img src="./static/assets/social_icons/pinterest.png">
-                 <img src="./static/assets/social_icons/flickr.png">
-             </div>
+ <div class="about">
+     <h1 class="text-center" >ABOUT US</h1><br>
+     <p class="text-center">When you work with us, you are a part of a team of committed collaborators. All
+         aspects of our software development process are integrated, interactive and agile
+     </p>
+     <p class="text-center">Our approach unifies design, development and product management to create exceptional
+         products.</p>
+     <p class="text-center m">We start each project by understanding your business goals, the user's needs
+         and the product requirements.<br> Then we help them translate into effective
+         and elegant solutions.
+     </p>
+ </div>
+ <div class="services">
+     <div class="small-overlay">
+         <h1 class="text-center text-white">SERVICES</h1><br><br>
+         <p class="text-center text-white m-text">Before we sign or write a line of code our team will spend the necessary time needed to understand your product vision.<br>The outcome of this scoping
+             session is a
+             proposal or high level statement of work.<br>Based on your requirements, we can provide a
+             complete offering or just the pieces you need.</p>
+     </div>
+ </div>
+ <div class="what-we-do text-center">
+     <h1 class="b-text">WHAT WE DO</h1><br><br>
+         <div class="row">
+           <div class="col-md-4" id="hide-design" >
+               <img src="./static/assets/services_icons/design_icon.png" alt="" class="img1">
+               <p><strong>DESIGN</strong></p>
+               <div class="design">
+               <p class="hide">Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+                   Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+               </div>
+           </div>
+             <figure class="col-md-4">
+                 <img src="./static/assets/services_icons/dev_icon.png" alt="services-icons" class="service-icons dev">
+                 <figcaption id="devtext" class="b-text">DEVELOPMENT</figcaption>
+                 <br>
+                 <p id="devp" class="hide">All engineers are fluent in the latest enterprise, mobile and web development
+                     technologies.
+                     They collaborate with your team to write, and improve code on a daily basis, using proven
+                     practices such as test-driven development and pair programming.</p>
+             </figure>
+             <figure class="col-md-4">
+                 <img src="./static/assets/services_icons/product_icon.png" alt="services-icons" class="service-icons pro">
+                 <figcaption id="protext" class="b-text">PRODUCT DESIGN</figcaption>
+                 <br>
+                 <p id="prop" class="hide">Planning and development is iterative. Because we are constantly coding and testing,
+                     the products
+                     we build are always ready to go live.
+                     This iterative process allows for changes as business requirements evolve.</p>
+             </figure>
+           </div>
+       </div>
+   </div>
+   <div class="portfolio container-fluid">
+       <br><br><br>
+       <h1 class="text-center b-text">PORTFOLIO</h1><br>
+       <div class="col-md-12 mx-auto">
+           <div class="row">
+               <div class="col-md-2"></div>
+               <div class="col-md-2">
+                   <div class="portimg">
+                       <img src="images/portfolio/work4.jpg" alt="portfolio-images" class="image img-fluid">
+                       <div>
+                           <div class="porttext" style="display:none"> Delani Studio</div>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-md-2">
+                   <div class="portimg">
+                       <img src="images/portfolio/work3.jpg" alt="portfolio-images" class="image img-fluid">
+                       <div>
+                           <div class="porttext" style="display:none">Delani Studio</div>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-md-2">
+                   <div class="portimg">
+                       <img src="images/portfolio/work2.jpg" alt="portfolio-images" class="image img-fluid">
+                       <div>
+                           <div class="porttext" style="display:none">Delani Studio</div>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-md-2">
+                   <div class="portimg">
+                       <img src="images/portfolio/work1.jpg" alt="portfolio-images" class="image img-fluid">
+                       <div class="disc1">
+                           <div class="porttext" style="display:none">Delani Studio</div>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-md-2"></div>
+           </div>
+           <br>
+           <div class="row">
+               <div class="col-md-2"></div>
+               <div class="col-md-2">
+                   <div class="portimg">
+                       <img src="images/portfolio/work5.jpg" alt="portfolio-images" class="image img-fluid">
+                       <div class="porttext" style="display:none">Delani Studio</div>
+                   </div>
+               </div>
+               <div class="col-md-2">
+                   <div class="portimg">
+                       <img src="images/portfolio/work6.jpg" alt="portfolio-images" class="image img-fluid">
+                       <div class="porttext" style="display:none">Delani Studio</div>
+                   </div>
+               </div>
+               <div class="col-md-2">
+                   <div class="portimg">
+                       <img src="images/portfolio/work7.jpg" alt="portfolio-images" class="image img-fluid">
+                       <div class="porttext" style="display:none">Delani Studio</div>
+                   </div>
+               </div>
+               <div class="col-md-2">
+                   <div class="portimg">
+                       <img src="images/portfolio/work8.jpg" alt="portfolio-images" class="image img-fluid">
+                       <div class="porttext" style="display:none">Delani Studio</div>
+                   </div>
+               </div>
+               <div class="col-md-2"></div>
+           </div>
+       </div>
+   </div>
+   <br><br>
+   <div class="contact">
+       <div class="contact-overlay">
+           <h1 class="text-center text-white">CONTACT US</h1><br>
+           <div class="col-md-12 input">
+               <form id="form">
+                   <div class="row">
+                       <div class="col-md-2 form"></div>
+                       <input class="col-md-4 form-control name" type="text" id="name" name="name" placeholder="Name..."
+                              required><br><br>
+                       <input class="col-md-4 form-control email" type="email" id="email" name="email" placeholder="Email..."
+                              required>
+                       <div class="col-md-2">
+                       </div>
+                   </div>
+                   <div class="row input">
+                       <div class="col-md-2"></div>
+                       <textarea class="form-control col-md-8 text" rows="12" name="message" id="message"
+                                 placeholder="Your message here..."></textarea>
+                       <div class="col-md-2"></div>
+                   </div>
+                   <button class="btn btn-primary mx-auto d-block submit" id="okButton" type="submit">Submit</button>
+                   <br>
+               </form>
+           </div>
+       </div>
+   </div>
+   <br><br>
+
+       <div class="socials text-center">
+           <div class="col-md-2"></div>
+           <img src="./static/assets/social_icons/twitter.png">
+           <img src="./static/assets/social_icons/dribble.png">
+           <img src="./static/assets/social_icons/facebook.png">
+           <img src="./static/assets/social_icons/g_plus.png">
+           <img src="./static/assets/social_icons/skype.png">
+           <img src="./static/assets/social_icons/stumble_upon.png">
+           <img src="./static/assets/social_icons/behance.png">
+           <img src="./static/assets/social_icons/pinterest.png">
+           <img src="./static/assets/social_icons/flickr.png">
+       </div>
+       <br>
+       <footer class="text-center">Delani Studio <br> 2019</footer>
+   </div>
+   </body>
+   <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+   <script src="js/script.js"></script>
+   <script src="js/mailchimp.js"></script>
+   </html>
