Add ids to what we do section.

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 </figure>
                 <figure class="col-md-4">
                     <img src="./static/assets/services_icons/product_icon.png" alt="services-icons" class="service-icons pro">
-                    <figcaption id="protext" class="b-text">PRODUCT DESIGN</figcaption>
+                    <figcaption id="proicon">PRODUCT DESIGN</figcaption>
                     <br>
-                    <p id="prop" class="b-text">Planning and development is iterative. Because we are constantly coding and testing,
+                    <p id="protxt" class="b-text">Planning and development is iterative. Because we are constantly coding and testing,
                         the products
                         we build are always ready to go live.
                         This iterative process allows for changes as business requirements evolve.</p>
