--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="row">
                 <figure class="col-md-4">
                     <img src="./static/assets/services_icons/design_icon.png" alt="services-icons" class="service-icons des">
-                    <figcaption id="dtxt">DESIGN</figcaption>
+                    <figcaption id="dicon">DESIGN</figcaption>
                     <br>
                     <p id="dtxt">Our design practice offers a full range of services including brand strategy,
                         interaction and
@@ -58,27 +58,24 @@
                     <figcaption id="devicon">DEVELOPMENT</figcaption>
                     <br>
                     <p id="devtxt">All engineers are fluent in the latest enterprise, mobile and web development
-                        technologies.
-                        They collaborate with your team to write, and improve code on a daily basis, using proven
+                        technologies.They collaborate with your team to write, and improve code on a daily basis, using proven
                         practices such as test-driven development and pair programming.</p>
                 </figure>
                 <figure class="col-md-4">
                     <img src="./static/assets/services_icons/product_icon.png" alt="services-icons" class="service-icons pro">
                     <figcaption id="proicon">PRODUCT DESIGN</figcaption>
                     <br>
-                    <p id="protxt" class="b-text">Planning and development is iterative. Because we are constantly coding and testing,
-                        the products
-                        we build are always ready to go live.
-                        This iterative process allows for changes as business requirements evolve.</p>
+                    <p id="protxt">Planning and development is iterative. Because we are constantly coding and testing,
+                        the products we build are always ready to go live.This iterative process allows for changes as business requirements evolve.</p>
                 </figure>
             </div>
         </div>
     </div>
-    <div class="portfolio container-fluid">
-        <br><br><br>
-        <h1 class="text-center b-text">PORTFOLIO</h1><br>
+    <div class="container-fluid">
+        <br>
+        <h1 class="text-center">PORTFOLIO</h1><br>
         <div class="col-md-12 mx-auto">
-            <div class="row">
+            <div class="row>"
                 <div class="col-md-2"></div>
                 <div class="col-md-2">
                     <div class="portimg">
