--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
         </div>
     </div>
     <div class="what-we-do text-center">
-        <h1>WHAT WE DO</h1>
-        <br><br>
+        <h1 class="text-center">WHAT WE DO</h1><br><br>
         <div class="col-md-12">
             <div class="row">
-                <figure class="col-md-4">
+                <figure class="col-md-4" "text-center">
                     <img src="./static/assets/services_icons/design_icon.png" alt="services-icons" class="service-icons des">
                     <figcaption id="dicon">DESIGN</figcaption>
                     <br>
@@ -53,12 +52,13 @@
                         Throughout your project, our designers create and implement visual design and workflows, solicit
                         user feedback and work with you to make sure what gets built is what is needed.</p>
                 </figure>
-                <figure class="col-md-4">
+                <figure class="col-md-4" "text-center">
                     <img src="./static/assets/services_icons/dev_icon.png" alt="services-icons" class="service-icons dev">
                     <figcaption id="devicon">DEVELOPMENT</figcaption>
                     <br>
                     <p id="devtxt">All engineers are fluent in the latest enterprise, mobile and web development
-                        technologies.They collaborate with your team to write, and improve code on a daily basis, using proven
+                        technologies.
+                        They collaborate with your team to write, and improve code on a daily basis, using proven
                         practices such as test-driven development and pair programming.</p>
                 </figure>
                 <figure class="col-md-4">
@@ -66,7 +66,9 @@
                     <figcaption id="proicon">PRODUCT DESIGN</figcaption>
                     <br>
                     <p id="protxt">Planning and development is iterative. Because we are constantly coding and testing,
-                        the products we build are always ready to go live.This iterative process allows for changes as business requirements evolve.</p>
+                        the products
+                        we build are always ready to go live.
+                        This iterative process allows for changes as business requirements evolve.</p>
                 </figure>
             </div>
         </div>
@@ -75,7 +77,7 @@
         <br>
         <h1 class="text-center">PORTFOLIO</h1><br>
         <div class="col-md-12 mx-auto">
-            <div class="row>"
+            <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-2">
                     <div class="portimg">
