--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </p>
     </div>
     <div class="services">
-        <div class="small-overlay">
+        <div class="services-overlay">
             <h1 class="text-center text-white">SERVICES</h1><br><br>
             <p class="text-center text-white">Before we sign or write a line of code our team will spend the necessary time needed to understand your product vision.<br>The outcome of this scoping
                 session is a  proposal or high level statement of work.<br>Based on your requirements, we can provide a
@@ -165,7 +165,7 @@
                               placeholder="Your message here..."></textarea>
                     <div class="col-md-2"></div>
                 </div>
-                <button class="btn btn-success mx-auto d-block submit" id="okButton" type="submit">Subscribe</button>
+                <button class="btn btn-primary mx-auto d-block submit" id="okButton" type="submit">Submit</button>
                 <br>
             </form>
             </div>
