--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
                     <input class="col-md-4 form-control email" type="email" id="email" name="EMAIL" placeholder="Email..."
                            required>
 
- <div class="col-md-2">
-                    </div>
+                  <div class="col-md-2"></div>
                 </div>
                 <div class="row input">
                     <div class="col-md-2"></div>
