Add div tags to craete hover effect on portfolio.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
         </div>
     </div>
     <div class="container-fluid">
-        <br>
         <h1 class="text-center">PORTFOLIO</h1><br>
         <div class="col-md-12 mx-auto">
             <div class="row">
@@ -185,7 +184,7 @@
         <img src="./static/assets/social_icons/flickr.png">
     </div>
     <br>
-    <footer class="text-center">Delani Studio <br> 2019</footer>
+    <footer class="text-center">Delani Studio <br> 2020</footer
 </div>
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
