Change portfolio rows to cards.

--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Delani Studio</title>
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/0c3a8991fb082b831f0556fce/3af0a402a75f4953479c1801c.js");</script>
 </head>
 <body>
-<div class="container-fluid">
-    <div class="jumbotron-fluid">
-        <div class="overlay">
-            <img src="./static/assets/logo/logo.png" alt="logo" class="logo"><br>
-            <h1 class="text-white text-center">WELCOME</h1><br>
-            <h1 class="text-white text-center">TO DELANI STUDIO</h1>
-            <h5 class="text-white text-center">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
-                ENVIRONMENT</h5>
-            <a href="#about"><img src="./static/assets/mouse_click.png" class="mx-auto d-block" alt="mouse" id="bounce"></a>
-        </div>
-    </div>
+  <div class="container-fluid">
+      <div class="jumbotron-fluid">
+          <div class="overlay">
+              <img src="./static/assets/logo/logo.png" alt="logo" class="mx-auto d-block">
+              <h1 class="text-white text-center welcome h-text">Welcome</h1>
+              <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1>
+              <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
+                  ENVIRONMENT</h6>
+              <a href="#about"><img src="./static/assets/mouse_click.png" class="mx-auto d-block click" alt="mouse click" id="bounce"></a>
+          </div>
+      </div>
     <div class="about" id="about">
         <h1 class="text-center" >ABOUT US</h1><br>
         <p class="text-center">When you work with us, you are a part of a team of committed collaborators. All
@@ -73,73 +72,58 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <h1 class="text-center">PORTFOLIO</h1><br>
-        <div class="col-md-12 mx-auto">
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-2">
-                    <div class="portimg">
-                        <img src="./static/assets/portfolio/work4.jpg" alt="portfolio-images" class="image img-fluid">
-                        <div>
-                            <div class="porttext" style="display:none"> Delani Studio</div>
-                        </div>
-                    </div>
+    <div class=" container-fluid">
+        <h1 class="text-center">PORTFOLIO</h1>
+        <div class="card-deck text-center">
+            <div class="card">
+                <img src="./static/assets/portfolio/work4.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
                 </div>
-                <div class="col-md-2">
-                    <div class="portimg">
-                        <img src="./static/assets/portfolio/work3.jpg" alt="portfolio-images" class="image img-fluid">
-                        <div>
-                            <div class="porttext" style="display:none">Delani Studio</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="portimg">
-                        <img src="./static/assets/portfolio/work2.jpg" alt="portfolio-images" class="image img-fluid">
-                        <div>
-                            <div class="porttext" style="display:none">Delani Studio</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="portimg">
-                        <img src="./static/assets/portfolio/work1.jpg" alt="portfolio-images" class="image img-fluid">
-                        <div class="disc1">
-                            <div class="porttext" style="display:none">Delani Studio</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2"></div>
             </div>
-            <br>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-2">
-                    <div class="portimg">
-                        <img src="./static/assets/portfolio/work5.jpg" alt="portfolio-images" class="image img-fluid">
-                        <div class="porttext" style="display:none">Delani Studio</div>
-                    </div>
+            <div class="card">
+                <img src="./static/assets/portfolio/work3.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
                 </div>
-                <div class="col-md-2">
-                    <div class="portimg">
-                        <img src="./static/assets/portfolio/work6.jpg" alt="portfolio-images" class="image img-fluid">
-                        <div class="porttext" style="display:none">Delani Studio</div>
-                    </div>
+            </div>
+            <div class="card">
+                <img src="./static/assets/portfolio/work2.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio<br>Kenya</p>
                 </div>
-                <div class="col-md-2">
-                    <div class="portimg">
-                        <img src="./static/assets/portfolio/work7.jpg" alt="portfolio-images" class="image img-fluid">
-                        <div class="porttext" style="display:none">Delani Studio</div>
-                    </div>
+            </div>
+            <div class="card">
+                <img src="./static/assets/portfolio/work1.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
                 </div>
-                <div class="col-md-2">
-                    <div class="portimg">
-                        <img src="./static/assets/portfolio/work8.jpg" alt="portfolio-images" class="image img-fluid">
-                        <div class="porttext" style="display:none">Delani Studio</div>
-                    </div>
+            </div>
+        </div>
+        <div class="card-deck text-center">
+            <div class="card">
+                <img src="./static/assets/portfolio/work5.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
                 </div>
-                <div class="col-md-2"></div>
+            </div>
+            <div class="card">
+                <img src="./static/assets/portfolio/work6.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./static/assets/portfolio/work7.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
+                </div>
+            </div>
+            <div class="card">.
+                <img src="./static/assets/portfolio/work8.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Delani Portfolio</p>
+                </div>
             </div>
         </div>
     </div>
