Update changes made on portfolio.

--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
                 <div class="col-md-2">
                       <img src="./static/assets/portfolio/work4.jpg" alt="Design Kenya image" width="100%">
                     <div class="Hover">
-                      <p id=Hover_designKenya>Delani Portfolio</p>
+                      <p id=whitebox>Delani Portfolio</p>
                     </div>
                   </div>
                   <div class=" col-md-2">
                       <img src="./static/assets/portfolio/work3.jpg" alt="Ontario Security image" width="100%">
                     <div class="Hover">
-                      <p id=Hover_designKenya>Delani Portfolio</p>
+                      <p id=whitebox>Delani Portfolio</p>
                     </div>
                   </div>
                   <div class="col-md-2">
                       <img src="./static/assets/portfolio/work2.jpg" alt="Design image" width="100%">
                     <div class="Hover">
-                      <p id=Hover_designKenya>Delani Portfolio</p>
+                      <p id=whitebox>Delani Portfolio</p>
                     </div>
                   </div>
                   <div class="col-md-2">
                        <img src="./static/assets/portfolio/work1.jpg" alt="Design Kenya image" width="100%">
                       <div class="Hover">
-                        <p id=Hover_designKenya>Delani Portfolio</p>
+                        <p id=whitebox>Delani Portfolio</p>
                       </div>
                     </div>
                 </div>
@@ -106,31 +106,32 @@
                 <div class="row">
                   <div class="col-md-2"></div>
                   <div class="col-md-2">
-                      <img src="./static/assets/portfolio/work5.jpg" alt="Let's chat image" width="100%">
+                      <img src="./static/assets/portfolio/work5.jpg" alt="" width="100%">
                     <div class="Hover">
-                        <p id=Hover_designKenya>Lets Chat</p>
+                        <p id=whitebox>Lets Chat</p>
                     </div>
                   </div>
                   <div class= "col-md-2">
                       <img src="./static/assets/portfolio/work6.jpg" alt="Mobile App buttons image" width="100%">
                     <div class="Hover">
-                      <p id=Hover_designKenya>Mobile App buttons</p>
+                      <p id=whitebox>Delani Portfolio</p>
                     </div>
                   </div>
                   <div class="col-md-2">
                       <img src="./static/assets/portfolio/work7.jpg" alt="Mock-up Kenya_burned logo" width="100%">
                     <div class="Hover">
-                      <p id=Hover_designKenya>Mock-up Kenya_burned logo</p>
+                      <p id=whitebox>Mock-up Kenya_burned logo</p>
                     </div>
                   </div>
                   <div class="col-md-2>
                       <img src="./static/assets/portfolio/work8.jpg" alt="Mock-up Kenya_burned logo" width="100%">
                     <div class="Hover">
-                      <p id="Hover_designKenya">Giraffe restaurant</p>
+                      <p id=whitebox>Giraffe restaurant</p>
                     </div>
                   </div>
                 </div>
               </div>
+              <br>
     <div class="contacts">
         <div class="contact-overlay">
             <h1 class="text-center text-white b-text">CONTACT US</h1><br>
