Add alertafter receiving message from form.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-2">
-                      <img src="./static/assets/portfolio/work4.jpg" alt="Design Kenya image" width="100%">
+                      <img src="./static/assets/portfolio/work4.jpg" alt="" width="100%">
                     <div class="Hover">
                       <p id=whitebox>Delani Portfolio</p>
                     </div>
@@ -86,17 +86,17 @@
                   <div class=" col-md-2">
                       <img src="./static/assets/portfolio/work3.jpg" alt="Ontario Security image" width="100%">
                     <div class="Hover">
-                      <p id=whitebox>Delani Portfolio</p>
+                      <p id=whitebox>Ontario Security</p>
                     </div>
                   </div>
                   <div class="col-md-2">
-                      <img src="./static/assets/portfolio/work2.jpg" alt="Design image" width="100%">
+                      <img src="./static/assets/portfolio/work2.jpg" alt="" width="100%">
                     <div class="Hover">
                       <p id=whitebox>Delani Portfolio</p>
                     </div>
                   </div>
                   <div class="col-md-2">
-                       <img src="./static/assets/portfolio/work1.jpg" alt="Design Kenya image" width="100%">
+                       <img src="./static/assets/portfolio/work1.jpg" alt="" width="100%">
                       <div class="Hover">
                         <p id=whitebox>Delani Portfolio</p>
                       </div>
@@ -108,11 +108,11 @@
                   <div class="col-md-2">
                       <img src="./static/assets/portfolio/work5.jpg" alt="" width="100%">
                     <div class="Hover">
-                        <p id=whitebox>Lets Chat</p>
+                        <p id=whitebox>Delani Portfolio</p>
                     </div>
                   </div>
                   <div class= "col-md-2">
-                      <img src="./static/assets/portfolio/work6.jpg" alt="Mobile App buttons image" width="100%">
+                      <img src="./static/assets/portfolio/work6.jpg" alt="" width="100%">
                     <div class="Hover">
                       <p id=whitebox>Delani Portfolio</p>
                     </div>
@@ -120,11 +120,11 @@
                   <div class="col-md-2">
                       <img src="./static/assets/portfolio/work7.jpg" alt="Mock-up Kenya_burned logo" width="100%">
                     <div class="Hover">
-                      <p id=whitebox>Mock-up Kenya_burned logo</p>
+                      <p id=whitebox>Mock-up burned logo</p>
                     </div>
                   </div>
-                  <div class="col-md-2>
-                      <img src="./static/assets/portfolio/work8.jpg" alt="Mock-up Kenya_burned logo" width="100%">
+                  <div class="col-md-2">
+                      <img src="./static/assets/portfolio/work8.jpg" alt="" width="100%">
                     <div class="Hover">
                       <p id=whitebox>Giraffe restaurant</p>
                     </div>
