--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <br>
     <div class="contacts">
         <div class="contact-overlay">
-            <h1 class="text-center text-white b-text">CONTACT US</h1><br>
+            <h1 class="text-center text-white">CONTACT US</h1><br>
             <div class="col-md-12 input">
               <form id="form" method="POST">
                 <div class="row">
@@ -154,10 +154,10 @@
                 </div>
                 <button class="btn btn-primary mx-auto d-block submit" id="okButton" type="submit">Submit</button>
                 <br>
-            </form>
+             </form>
             </div>
-        </div>
-    </div>
+         </div>
+     </div>
     <br><br>
 
     <div class="social mx-auto text-center">
