Make transparent background to contact overlay.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container-fluid">
       <div class="jumbotron-fluid">
           <div class="overlay">
-              <img src="./static/assets/logo/logo.png" alt="logo" class="mx-auto d-block"><br><br>
+              <img src="./static/assets/logo/logo.png" alt="logo" class="mx-auto d-block" class="logo"><br><br>
               <h1 class="text-white text-center welcome h-text">WELCOME</h1><br>
               <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1><br>
               <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
