Add live link to README.md.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               <h1 class="text-white text-center welcome h-text">WELCOME</h1><br>
               <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1><br>
               <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
-                  ENVIRONMENT</h6>
+                  ENVIRONMENT</h6><br><b><br>
               <a href="#about"><img src="./static/assets/mouse_click.png" class="mx-auto d-block click" alt="mouse click" id="bounce"></a>
           </div>
       </div>
@@ -43,7 +43,7 @@
         <div class="row">
           <div class="col-md-4" id="design">
             <div class="hide-design-image">
-              <img src="./static/assets/services_icons/design_icon.png" alt="Delani's design icon.">
+              <img src="./static/assets/services_icons/design_icon.png" alt="Delani's design icon." class="vertical-align:middle;">
             </div>
 
               <p class="des">DESIGN</p>
@@ -53,7 +53,7 @@
           </div>
           <div class="col-md-4" id="development">
             <div class="hide-development-image">
-                <img src="./static/assets/services_icons/dev_icon.png" alt="Delani's dev. icon.">
+                <img src="./static/assets/services_icons/dev_icon.png" alt="Delani's dev. icon." class="devimg">
             </div>
               <p class="dev">DEVELOPMENT</p>
               <p class="hide" id="development-showing">
@@ -62,7 +62,7 @@
           </div>
           <div class="col-md-4" id="productManagement">
             <div class="hide-product-management">
-                <img src="./static/assets/services_icons/product_icon.png" alt="Delani's product.">
+                <img src="./static/assets/services_icons/product_icon.png" alt="Delani's product." class="proimg">
             </div>
               <p class="pro">PRODUCT MANAGEMENT</p>
               <p class="hide" id="product-management-showing">
@@ -71,7 +71,7 @@
           </div>
         </div>
     </div>
-    <br><br>
+    <br><br><br>
     <div class="container-fluid">
         <h1 class="text-center">PORTFOLIO</h1><br>
         <div class="col-md-12 mx-auto">
