Add changes to footer.

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <img src="./static/assets/social_icons/flickr.png">
     </div>
     <br>
-    <footer class="text-center">Delani Studio <br> 2020</footer
+    <footer class="text-center">Delani Studio <br> Wairimu<br>2020</footer>
 </div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/jquery.ajaxchimp.js"></script>
